; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-video.c_vidioc_querycap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx88/extr_cx88-video.c_vidioc_querycap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_capability = type { i32, i32, i32, i32, i32 }
%struct.cx8800_dev = type { i32, %struct.cx88_core* }
%struct.cx88_core = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }
%struct.cx8800_fh = type { %struct.cx8800_dev* }

@.str = private unnamed_addr constant [7 x i8] c"cx8800\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"PCI:%s\00", align 1
@CX88_VERSION_CODE = common dso_local global i32 0, align 4
@V4L2_CAP_VIDEO_CAPTURE = common dso_local global i32 0, align 4
@V4L2_CAP_READWRITE = common dso_local global i32 0, align 4
@V4L2_CAP_STREAMING = common dso_local global i32 0, align 4
@V4L2_CAP_VBI_CAPTURE = common dso_local global i32 0, align 4
@UNSET = common dso_local global i64 0, align 8
@V4L2_CAP_TUNER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_capability*)* @vidioc_querycap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_querycap(%struct.file* %0, i8* %1, %struct.v4l2_capability* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_capability*, align 8
  %7 = alloca %struct.cx8800_dev*, align 8
  %8 = alloca %struct.cx88_core*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_capability* %2, %struct.v4l2_capability** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.cx8800_fh*
  %11 = getelementptr inbounds %struct.cx8800_fh, %struct.cx8800_fh* %10, i32 0, i32 0
  %12 = load %struct.cx8800_dev*, %struct.cx8800_dev** %11, align 8
  store %struct.cx8800_dev* %12, %struct.cx8800_dev** %7, align 8
  %13 = load %struct.cx8800_dev*, %struct.cx8800_dev** %7, align 8
  %14 = getelementptr inbounds %struct.cx8800_dev, %struct.cx8800_dev* %13, i32 0, i32 1
  %15 = load %struct.cx88_core*, %struct.cx88_core** %14, align 8
  store %struct.cx88_core* %15, %struct.cx88_core** %8, align 8
  %16 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %17 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %16, i32 0, i32 4
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @strcpy(i32 %18, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %20 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %21 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.cx88_core*, %struct.cx88_core** %8, align 8
  %24 = getelementptr inbounds %struct.cx88_core, %struct.cx88_core* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @strlcpy(i32 %22, i32 %26, i32 4)
  %28 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %29 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.cx8800_dev*, %struct.cx8800_dev** %7, align 8
  %32 = getelementptr inbounds %struct.cx8800_dev, %struct.cx8800_dev* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i8* @pci_name(i32 %33)
  %35 = call i32 @sprintf(i32 %30, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %34)
  %36 = load i32, i32* @CX88_VERSION_CODE, align 4
  %37 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %38 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* @V4L2_CAP_VIDEO_CAPTURE, align 4
  %40 = load i32, i32* @V4L2_CAP_READWRITE, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @V4L2_CAP_STREAMING, align 4
  %43 = or i32 %41, %42
  %44 = load i32, i32* @V4L2_CAP_VBI_CAPTURE, align 4
  %45 = or i32 %43, %44
  %46 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %47 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %46, i32 0, i32 0
  store i32 %45, i32* %47, align 4
  %48 = load i64, i64* @UNSET, align 8
  %49 = load %struct.cx88_core*, %struct.cx88_core** %8, align 8
  %50 = getelementptr inbounds %struct.cx88_core, %struct.cx88_core* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = icmp ne i64 %48, %52
  br i1 %53, label %54, label %60

54:                                               ; preds = %3
  %55 = load i32, i32* @V4L2_CAP_TUNER, align 4
  %56 = load %struct.v4l2_capability*, %struct.v4l2_capability** %6, align 8
  %57 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = or i32 %58, %55
  store i32 %59, i32* %57, align 4
  br label %60

60:                                               ; preds = %54, %3
  ret i32 0
}

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i32 @strlcpy(i32, i32, i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8*) #1

declare dso_local i8* @pci_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
